--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,7 +4,7 @@
 html,
 body {
   font-family: $font;
-  font-size: 1rem;
+  font-size: 16px;
   padding: 0;
   margin: 0;
   scroll-behavior: smooth;
@@ -19,7 +19,6 @@ body {
     transition: themed('theme-transition')
   }
   .content-wrapper {
-    padding: 0% 5%;
-    padding-bottom: 6.25rem;
+    padding: 0 5% 6.25rem 5%;
   }
 }
